h1 글씨색 빨강

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style type="text/css">
+		h1 {color: red;}
+	</style>
 </head>
 <body>
 	<h1>GIT 연습</h1>
