--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li>Git이란 무엇인가?</li>
 		<li>버전 설명</li>
 		<li>브랜치 충돌</li>
+		<li>원격저장소</li>
 	</ul>
 	<span>우에우에우에에</span>
 	<p>p는 문단을 나타내는 태그입니다.</p>
