--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Git 수업</title>
 	<style type="text/css">
 		h1 {color: red;}
 	</style>
